--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<title>index</title>
 		<meta name="description" content="" />
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
+<!-- 		<meta name="viewport" content="width=device-width; initial-scale=1.0" /> -->
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 <!-- 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
@@ -22,6 +22,9 @@
 	<script type="text/javascript" src="js/json3.min.js"></script>
 	<script type="text/javascript" src="js/backbone-min.js"></script>
 	
+	<script type="text/javascript" src="js/models.js"></script>
+	<script type="text/javascript" src="js/application.js"></script>
+	
 			</head>
 	<body>
 		<div>
@@ -34,7 +37,12 @@
 					<li>My Library</li>
 				</ul>
 			</nav>
-			<section id="application"></section>
+			<section id="application">
+				<form id="search_form">
+				<input type="text" id="search" name="query"><input type="submit" id="search_submit" value="Search">
+				<ul id="results"></ul>
+				</form>
+			</section>
 			<footer>
 				<p>
 					&copy; Copyright
