--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>index</title>
+		<title>VoiceBoxen - An Enhanced Voicebox Experience</title>
 		<meta name="description" content="" />
 <!-- 		<meta name="viewport" content="width=device-width; initial-scale=1.0" /> -->
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
@@ -49,5 +49,6 @@
 				</p>
 			</footer>
 		</div>
+		<div style="display:none;" id="testdata">{"query":"pour","language":null,"page":1,"per_page":100,"total_pages":1,"total_entries":9,"songs":[{"id":68074,"title":"Pour Some Sugar On Me","artist":"Cheese, Richard","language":"English","duration":124160,"play_count":9},{"id":5910,"title":"Pour Some Sugar On Me","artist":"Def Leppard","language":"English","duration":255000,"play_count":229},{"id":4589,"title":"Help Pour Out The Rain","artist":"Jewell, Buddy","language":"English","duration":242000,"play_count":8},{"id":69193,"title":"Ca Plane Pour Moi","artist":"Plastic Bertrand","language":"English","duration":null,"play_count":2},{"id":56264,"title":"Vivre Pour Tol Mourir Pour Tol","artist":"S\u00f4\u0301ng Ch\u00ea\u0301t Cho Cha\u0309ng","language":"Vietnamese","duration":430500,"play_count":0},{"id":55029,"title":"Lamour C'est Pour Rien","artist":"Thanh Lan","language":"Vietnamese","duration":357700,"play_count":0},{"id":55033,"title":"Vivre Pour Toi Mourir Pour Toi","artist":"Thanh Lan","language":"Vietnamese","duration":430500,"play_count":0},{"id":56261,"title":"L'amour C'est Pour Rlen","artist":"Tinh Cho Kh\u00f4ng Bl\u00ea\u0301u Kh\u00f4ng","language":"Vietnamese","duration":357700,"play_count":0},{"id":12137,"title":"Pour Me","artist":"Trick Pony","language":"English","duration":184800,"play_count":2}]}</div>
 	</body>
 </html>
