--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<title>VoiceBoxen - An Enhanced Voicebox Experience</title>
 		<meta name="description" content="" />
-<!-- 		<meta name="viewport" content="width=device-width; initial-scale=1.0" /> -->
+		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 <!-- 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
@@ -40,8 +40,9 @@
 			<section id="application">
 				<form id="search_form">
 				<input type="text" id="search" name="query"><input type="submit" id="search_submit" value="Search">
-				<ul id="results"></ul>
 				</form>
+				<ul id="results"></ul>
+				<div class="clear"></div>
 			</section>
 			<footer>
 				<p>
