--- a/index.html
+++ b/index.html
@@ -31,30 +31,31 @@
 			<header>
 				<h1>Voiceboxen - An Enhanced Voicebox Experience</h1>
 			</header>
-			<nav>
+<!-- 			<nav>
 				<ul>
 					<li>Search</li>
 					<li>My Library</li>
 				</ul>
-			</nav>
-			<section id="application">
+			</nav> -->
+						<section id="application">
 				<form id="search_form">
 				<input type="text" id="search" name="query"><input type="submit" id="search_submit" value="Search">
 				</form>
 				<ul id="results"></ul>
 				<div class="clear"></div>
 			</section>
-			<footer>
-				<p>
-					&copy; Copyright
-				</p>
-			</footer>
-		</div>
+<!-- 			<footer>
+			<p>
+			&copy; Copyright
+			</p>
+			</footer> -->		</div>
 		<!-- Templates -->
 		<script type="text/template" id="song-template">
 			<div class="song_title"><%= title %></div>
-			<input type="button" class="sing_later" value="Sing later">
+			<div class="inputs">
 			<input type="button" class="sing" value="Sing!">
+			<input type="button" class="sing_later" value="Sing later">
+			</div>
 			<div class="clear"></div> 
 		</script>
 		<div style="display:none;" id="testdata">{"query":"pour","language":null,"page":1,"per_page":100,"total_pages":1,"total_entries":9,"songs":[{"id":68074,"title":"Pour Some Sugar On Me","artist":"Cheese, Richard","language":"English","duration":124160,"play_count":9},{"id":5910,"title":"Pour Some Sugar On Me","artist":"Def Leppard","language":"English","duration":255000,"play_count":229},{"id":4589,"title":"Help Pour Out The Rain","artist":"Jewell, Buddy","language":"English","duration":242000,"play_count":8},{"id":69193,"title":"Ca Plane Pour Moi","artist":"Plastic Bertrand","language":"English","duration":null,"play_count":2},{"id":56264,"title":"Vivre Pour Tol Mourir Pour Tol","artist":"S\u00f4\u0301ng Ch\u00ea\u0301t Cho Cha\u0309ng","language":"Vietnamese","duration":430500,"play_count":0},{"id":55029,"title":"Lamour C'est Pour Rien","artist":"Thanh Lan","language":"Vietnamese","duration":357700,"play_count":0},{"id":55033,"title":"Vivre Pour Toi Mourir Pour Toi","artist":"Thanh Lan","language":"Vietnamese","duration":430500,"play_count":0},{"id":56261,"title":"L'amour C'est Pour Rlen","artist":"Tinh Cho Kh\u00f4ng Bl\u00ea\u0301u Kh\u00f4ng","language":"Vietnamese","duration":357700,"play_count":0},{"id":12137,"title":"Pour Me","artist":"Trick Pony","language":"English","duration":184800,"play_count":2}]}</div>
