--- a/index.html
+++ b/index.html
@@ -9,46 +9,50 @@
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-<!-- 		<link rel="shortcut icon" href="/favicon.ico" />
+		<!-- 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
-	<!-- CSS -->
-	<link href="css/reset.css" rel="stylesheet" type="text/css"/>
-	<link href="css/application.css" rel="stylesheet" type="text/css"/>
-
-
-	<!-- Javascript libraries -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/underscore-min.js"></script>
-	<script type="text/javascript" src="js/json3.min.js"></script>
-	<script type="text/javascript" src="js/backbone-min.js"></script>
-	
-	<script type="text/javascript" src="js/models.js"></script>
-	<script type="text/javascript" src="js/application.js"></script>
-	
-			</head>
+		<!-- CSS -->
+		<link href="css/reset.css" rel="stylesheet" type="text/css"/>
+		<link href="css/application.css" rel="stylesheet" type="text/css"/>
+		<!-- Javascript libraries -->
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/underscore-min.js"></script>
+		<script type="text/javascript" src="js/json3.min.js"></script>
+		<script type="text/javascript" src="js/backbone-min.js"></script>
+		<script type="text/javascript" src="js/models.js"></script>
+		<script type="text/javascript" src="js/application.js"></script>
+	</head>
 	<body>
 		<div>
 			<header>
 				<h1>Voiceboxen - An Enhanced Voicebox Experience</h1>
 			</header>
-<!-- 			<nav>
-				<ul>
-					<li>Search</li>
-					<li>My Library</li>
-				</ul>
+			<!-- 			<nav>
+			<ul>
+			<li>Search</li>
+			<li>My Library</li>
+			</ul>
 			</nav> -->
-						<section id="application">
+			<section id="application">
 				<form id="search_form">
-				<input type="text" id="search" name="query"><input type="submit" id="search_submit" value="Search">
+					<input type="text" id="search" name="query">
+					<input type="submit" id="search_submit" value="Search">
 				</form>
+				<input type="submit" id="logout_submit" value="logout" />
 				<ul id="results"></ul>
 				<div class="clear"></div>
+				<section id="popup">
+					<input type="text" id="username"/><label for="username">username:</label>
+					<input type="password" id="password"/><label for="password">password:</label>
+					<div class="inputs"><input type="submit" id="login_submit" value="login" /><input type="submit" id="signup_submit" value="signup" /></div>
+				</section>
 			</section>
-<!-- 			<footer>
+			<!-- 			<footer>
 			<p>
 			&copy; Copyright
 			</p>
-			</footer> -->		</div>
+			</footer> -->
+		</div>
 		<!-- Templates -->
 		<script type="text/template" id="song-template">
 			<div class="song_title"><%= title %></div>
@@ -56,8 +60,10 @@
 			<input type="button" class="sing" value="Sing!">
 			<input type="button" class="sing_later" value="Sing later">
 			</div>
-			<div class="clear"></div> 
+			<div class="clear"></div>
 		</script>
-		<div style="display:none;" id="testdata">{"query":"pour","language":null,"page":1,"per_page":100,"total_pages":1,"total_entries":9,"songs":[{"id":68074,"title":"Pour Some Sugar On Me","artist":"Cheese, Richard","language":"English","duration":124160,"play_count":9},{"id":5910,"title":"Pour Some Sugar On Me","artist":"Def Leppard","language":"English","duration":255000,"play_count":229},{"id":4589,"title":"Help Pour Out The Rain","artist":"Jewell, Buddy","language":"English","duration":242000,"play_count":8},{"id":69193,"title":"Ca Plane Pour Moi","artist":"Plastic Bertrand","language":"English","duration":null,"play_count":2},{"id":56264,"title":"Vivre Pour Tol Mourir Pour Tol","artist":"S\u00f4\u0301ng Ch\u00ea\u0301t Cho Cha\u0309ng","language":"Vietnamese","duration":430500,"play_count":0},{"id":55029,"title":"Lamour C'est Pour Rien","artist":"Thanh Lan","language":"Vietnamese","duration":357700,"play_count":0},{"id":55033,"title":"Vivre Pour Toi Mourir Pour Toi","artist":"Thanh Lan","language":"Vietnamese","duration":430500,"play_count":0},{"id":56261,"title":"L'amour C'est Pour Rlen","artist":"Tinh Cho Kh\u00f4ng Bl\u00ea\u0301u Kh\u00f4ng","language":"Vietnamese","duration":357700,"play_count":0},{"id":12137,"title":"Pour Me","artist":"Trick Pony","language":"English","duration":184800,"play_count":2}]}</div>
+		<div style="display:none;" id="testdata">
+			{"query":"pour","language":null,"page":1,"per_page":100,"total_pages":1,"total_entries":9,"songs":[{"id":68074,"title":"Pour Some Sugar On Me","artist":"Cheese, Richard","language":"English","duration":124160,"play_count":9},{"id":5910,"title":"Pour Some Sugar On Me","artist":"Def Leppard","language":"English","duration":255000,"play_count":229},{"id":4589,"title":"Help Pour Out The Rain","artist":"Jewell, Buddy","language":"English","duration":242000,"play_count":8},{"id":69193,"title":"Ca Plane Pour Moi","artist":"Plastic Bertrand","language":"English","duration":null,"play_count":2},{"id":56264,"title":"Vivre Pour Tol Mourir Pour Tol","artist":"S\u00f4\u0301ng Ch\u00ea\u0301t Cho Cha\u0309ng","language":"Vietnamese","duration":430500,"play_count":0},{"id":55029,"title":"Lamour C'est Pour Rien","artist":"Thanh Lan","language":"Vietnamese","duration":357700,"play_count":0},{"id":55033,"title":"Vivre Pour Toi Mourir Pour Toi","artist":"Thanh Lan","language":"Vietnamese","duration":430500,"play_count":0},{"id":56261,"title":"L'amour C'est Pour Rlen","artist":"Tinh Cho Kh\u00f4ng Bl\u00ea\u0301u Kh\u00f4ng","language":"Vietnamese","duration":357700,"play_count":0},{"id":12137,"title":"Pour Me","artist":"Trick Pony","language":"English","duration":184800,"play_count":2}]}
+		</div>
 	</body>
 </html>
