--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			</ul>
 			</nav> -->
 			<section id="application">
-				<nav><a href="#recent">recent</a><a class="icon-music" href="#queued">queued</a><a href="#saved">saved</a><div class="clear"></div></nav>				
+				<nav><a class="icon-list" href="#recent">recent</a><a class="icon-music" href="#queued"> queued</a><a class="icon-tag" href="#saved">saved</a><div class="clear"></div></nav>				
 				<form id="search_form">
-					<input type="text" id="search" name="query">
+					<input type="text" id="search" placeholder="e.g., Empire State of Mind" name="query">
 					<input type="submit" id="search_submit" value="search">
 					<div class="clear"></div>
 				</form>
