Toggle save icon

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 		<script type="text/template" id="song-template">
 			<div class="song_title"><%= title %></div>
 			<div class="inputs">
-			<input type="button" class="sing" value="sing now">
-			<input type="button" class="sing_later" value="save">
-			<input type="button" class="remove" value="remove">
+			<div class="sing">sing now</div>
+			<div class="sing_later">save</div>
+			<div class="remove">remove</div>
 			</div>
 			<div class="clear"></div>
 		</script>
