--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</form>
 				<ul id="results"></ul>
 				<div class="clear"></div>
-				<section id="popup">
+				<section class="popup" id="popup_login">
 					<p>
 						Voiceboxen is free. Sign up to start
 						bookmarking songs for next time
@@ -49,9 +49,11 @@
 					<label for="username">email:</label>
 					<input type="password" id="password"/>
 					<label for="password">password:</label>
+					<div class="clear"></div>
 					<div class="inputs">
-						<input type="submit" id="login_submit" value="LOG IN" />
 						<input type="submit" id="signup_submit" value="SIGN UP" />
+						<input type="submit" id="login_submit" value="LOG IN" />
+						<div class="clear"></div>
 					</div>
 				</section>
 			</section>
